perf: 添加文件